fixed horizontal scroll issue, updated projects css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ a {
 }
 
 .ptlb a {
-    width: 200px;
+    /* width: 500px; */
     padding: 12px 48px;
     text-align: center;
     color: yellow;
@@ -166,6 +166,10 @@ a {
 
 .pt:hover .ptlb a {
     opacity: 1;
+}
+
+#description {
+    color: red;
 }
 
 /* TOGGLE CLASSES */
